# py-godel-numbers

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: test.yml
py_godel_numbers/: __init__.py  arithmetic.py  config.py  godel.py  primes.py
tests/: test_godel.py
