[tool.poetry]
name = "py-godel-numbers"
version = "0.1.0"
description = "My implementation of Gödel numbers in Python"
authors = ["Pieter Marsman <pietermarsman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
nox = "^2024.4.15"

[tool.poetry.group.format.dependencies]
ruff = "^0.5.2"

[tool.poetry.group.types.dependencies]
mypy = "^1.10.1"
pytest-mypy = "^0.10.3"

[tool.poetry.group.tests.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
show_error_codes = true

disallow_any_unimported = true
disallow_any_decorated = true
disallow_any_explicit = true

warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["nox"]
ignore_missing_imports = true
